--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             const distance = Math.sqrt(deltaX ** 2 + deltaY ** 2);
             const standardDeviation = `calc(${offset} * ${distance * 1.66})`; // Scale the distance as needed
 
-            circle.style.filter = `drop-shadow(${shadowOffsetX} ${shadowOffsetY} ${standardDeviation} #808080)`;
+            circle.style.filter = `drop-shadow(${shadowOffsetX} ${shadowOffsetY} ${standardDeviation} #7f7f7f)`;
         });
         
         
