--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </header>
 
         <!-- Elipse mask overlay -->
-        <div id="main" class="scrollable-content"></div>
+        <div class="scrollable-content"></div>
         
         <!-- Elipse mask overlay -->
         <div class="gradient-overlay"></div>
@@ -117,7 +117,8 @@
                 const patternSize = document.getElementById('circle-pattern');
                     patternSize.style.width = '120vw';  // Change width
                     patternSize.style.height = '500vh'; //hay que poner 100 mas
-                    patternSize.style.left = '-5vw';
+                const arreglo = -10 * (window.innerWidth / 100);
+                    patternSize.style.left = arreglo + 'px';
 
                     setupMovementHandlers();
 
@@ -293,9 +294,9 @@
             let scrollSpeedX = 0;
             let targetScrollSpeedY = 0;
             let targetScrollSpeedX = 0;
-            const acceleration = 0.02;
-            const deceleration = 0.95; // Standard deceleration
-            const edgeDeceleration = 0.95; // Stronger deceleration when at edges
+            const acceleration = 0.01;
+            const deceleration = 0.99; // Standard deceleration
+            const edgeDeceleration = 0.97; // Stronger deceleration when at edges
             const minDeceleration = 0.01; // Minimum speed before clamping to zero
 
             // Define maximum scrolling speed based on the minimum of 5vw and 5vh
